--- a/client/src/styles/LotInfoComponent.scss
+++ b/client/src/styles/LotInfoComponent.scss
@@ -6,9 +6,9 @@ body {
   background: white;
 }
 .lot-outer-container {
-  margin-left: 15vw;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .lot-info-container {
